<resources>
    <string name="app_name">Composition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo_contentDescription">Welcome logo</string>
    <string name="title_textView">Состав числа</string>
    <string name="game_rules_textView">Правила игры: перед вами будет три фигуры, две снизу и одна
        сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была
        равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в
        верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4.
        Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7.
    </string>
    <string name="accept_button">Понятно</string>
    <string name="choose_level_title">Выберите уровень:</string>
    <string name="test_level_text_button">ТЕСТОВЫЙ</string>
    <string name="easy_level_text_button">ЛЕГКИЙ</string>
    <string name="normal_level_text_button">СРЕДНИЙ</string>
    <string name="hard_level_text_button">СЛОЖНЫЙ</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="game_over_text">Game is over</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
</resources>