<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_level_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/test_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/test_level_text_button"
        android:backgroundTint="@android:color/holo_purple"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/easy_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/easy_level_text_button"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/normal_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/normal_level_text_button"
        android:backgroundTint="@android:color/holo_orange_light"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/hard_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/hard_level_text_button"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>