<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/smile_imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/game_over_text"
        app:layout_constraintBottom_toTopOf="@id/required_answers_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_sad_smile" />

    <TextView
        android:id="@+id/required_answers_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/required_score"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/score_answers_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/score_answers_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/required_percentage_textView"
        app:layout_constraintEnd_toEndOf="@id/required_answers_textView"
        app:layout_constraintStart_toStartOf="@id/required_answers_textView"
        app:layout_constraintTop_toBottomOf="@id/required_answers_textView" />

    <TextView
        android:id="@+id/required_percentage_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/required_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/score_percentage_textView"
        app:layout_constraintEnd_toEndOf="@id/required_answers_textView"
        app:layout_constraintStart_toStartOf="@id/required_answers_textView"
        app:layout_constraintTop_toBottomOf="@id/score_answers_textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/score_percentage_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/required_answers_textView"
        app:layout_constraintStart_toStartOf="@id/required_answers_textView"
        app:layout_constraintTop_toBottomOf="@id/required_percentage_textView" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>